@@ -92,6 +92,9 @@ Here is a history of user visible changes to Mailman.
 
     - Recognize a couple more bounces.
 
+    - Fixed a bug introduced in 2.1.11 which would attempt to store bounce info
+      for a member just deleted if bounce_you_are_disabled_warnings is zero.
+
  i18n
 
     - Updated Dutch, Catalan and Polish translations.
